  data. Any errors encountered can cause the sending goroutine to backoff and
  resend data.

* Added http_timeout to elasticsearch output to prevent slow or stale
  connections from holding up the flow. (issue #769)

* Add query parameters to the Message as Fields in the HttpListenInput

* Add QueueTTL option to AMQPInput to allow specifying message expiration.

0.5.2 (2014-05-16)
==================

Bug Handling
------------

* FileOutput no longer panics when using `format = "text"` and payload is nil
  (issue #843).

* Fix SandboxDecoder pass-through case so decoders that only use write_message
  and not inject_message will emit messages correctly (issue #844).

* Fixed TcpInput so it will only override the default delimiter for a
  RegexpParser if a delimiter is specified in the config.

* Fix the FileOutput panic when HUP'ed.  Modified the CheckWritePermission
  utility function to use a unique filename for each check. (issue #808)

* Terminated plugins are now removed from the SandboxManager quota (issue
  #774).

* Fixed SIGUSR1 triggered text report to stdout to work with updated
  heka.all-report JSON data structure (issue #762).

* MultiDecoder now uses message.GetType() instead of Message.Type so
  emitted message type will be generated correctly (issue #761).

* LogstreamerInput no longer causes Heka to fail to start on empty or
  whitespace-only journal files (issue #755).

* The cbufd_host_aggregator filter now properly reclaims expired hosts.

* Pull in a new lua_sandbox to fix JSON encoding of empty strings in the
  sandbox plugin output() call.

* Escape regexp meta characters (notably '\') to prevent a panic in the LogstreamerInput on Windows

0.5.1 (2014-03-18)
==================

Bug Handling
------------

* Skip *.bak, *.tmp, *~, and .files in a config dir as a non-breaking band-aid
  until we require an explicit naming convention in 0.6 (see issue #750).

* heka-logstreamer command now supports config directories in addition to