@@ -37,6 +37,13 @@ Config:
 - Encoder (string)
     Default to "ProtobufEncoder".
 
+.. versionadded:: 0.6
+
+- tls (TlsConfig):
+    An optional sub-section that specifies the settings to be used for any
+    SSL/TLS encryption. This will only have any impact if `URL` uses the
+    `AMQPS` URI scheme. See :ref:`tls`.
+
 Example (that sends log lines from the logger):
 
 .. code-block:: ini
