@@ -17,11 +17,14 @@ package amqp
 
 import (
 	"bytes"
+	"crypto/tls"
 	"errors"
 	"fmt"
 	"github.com/mozilla-services/heka/message"
 	. "github.com/mozilla-services/heka/pipeline"
+	"github.com/mozilla-services/heka/plugins/tcp"
 	"github.com/streadway/amqp"
+	"strings"
 	"sync"
 	"time"
 )
@@ -103,6 +106,9 @@ type AMQPInputConfig struct {
 	// 0 is a valid ttl which mimics "immediate" expiration.
 	// Default value is -1 which leaves it undefined.
 	QueueTTL int32
+	// Optional subsection for TLS configuration of AMQPS connections. If
+	// unspecified, the default AMQPS settings will be used.
+	Tls tcp.TlsConfig
 }
 
 // AMQP Output config struct
@@ -127,6 +133,13 @@ type AMQPOutputConfig struct {
 	// Whether messages published should be marked as persistent or
 	// transient. Defaults to non-persistent.
 	Persistent bool
+	// Whether messages published should be fully serialized when
+	// published. The AMQP input will automatically detect these
+	// messages and deserialize them. Defaults to true.
+	Serialize bool
+	// Optional subsection for TLS configuration of AMQPS connections. If
+	// unspecified, the default AMQPS settings will be used.
+	Tls tcp.TlsConfig
 	// MIME content type for the AMQP header.
 	ContentType string
 	// Default the encoder
@@ -143,13 +156,29 @@ type AMQPConnectionTracker struct {
 	connWg  *sync.WaitGroup
 }
 
+// AMQP connection dialer
+type AMQPDialer struct {
+	tlsConfig *tls.Config
+}
+
+// If additional TLS settings were specified, the dialer uses amqp.DialTLS
+// instead of amqp.Dial.
+func (dialer *AMQPDialer) Dial(url string) (conn AMQPConnection, err error) {
+	if dialer.tlsConfig != nil {
+		conn, err = amqp.DialTLS(url, dialer.tlsConfig)
+	} else {
+		conn, err = amqp.Dial(url)
+	}
+	return
+}
+
 // Basic hub that manages AMQP Connections
 //
 // Since multiple channels should be utilized for a single connection,
 // this hub manages the connections, dispensing channels per broker
 // config.
 type AMQPConnectionHub interface {
-	GetChannel(url string) (ch AMQPChannel, usageWg, connectionWg *sync.WaitGroup, err error)
+	GetChannel(url string, dialer AMQPDialer) (ch AMQPChannel, usageWg, connectionWg *sync.WaitGroup, err error)
 	Close(url string, connWg *sync.WaitGroup)
 }
 
@@ -166,7 +195,7 @@ var amqpHub AMQPConnectionHub
 //
 // The caller may then wait for the connectionWg to get notified when the
 // connection has been torn down.
-func (ah *amqpConnectionHub) GetChannel(url string) (ch AMQPChannel,
+func (ah *amqpConnectionHub) GetChannel(url string, dialer AMQPDialer) (ch AMQPChannel,
 	usageWg, connectionWg *sync.WaitGroup, err error) {
 	ah.mutex.Lock()
 	defer ah.mutex.Unlock()
@@ -178,7 +207,7 @@ func (ah *amqpConnectionHub) GetChannel(url string) (ch AMQPChannel,
 	)
 	if trk, ok = ah.connections[url]; !ok {
 		// Create the connection
-		conn, err = amqp.Dial(url)
+		conn, err = dialer.Dial(url)
 		if err != nil {
 			return
 		}
@@ -259,7 +288,15 @@ func (ao *AMQPOutput) ConfigStruct() interface{} {
 func (ao *AMQPOutput) Init(config interface{}) (err error) {
 	conf := config.(*AMQPOutputConfig)
 	ao.config = conf
-	ch, usageWg, connectionWg, err := amqpHub.GetChannel(conf.URL)
+	var tlsConf *tls.Config = nil
+	if strings.HasPrefix(conf.URL, "amqps://") && &ao.config.Tls != nil {
+		if tlsConf, err = tcp.CreateGoTlsConfig(&ao.config.Tls); err != nil {
+			return fmt.Errorf("TLS init error: %s", err)
+		}
+	}
+
+	var dialer = AMQPDialer{tlsConf}
+	ch, usageWg, connectionWg, err := amqpHub.GetChannel(conf.URL, dialer)
 	if err != nil {
 		return
 	}
@@ -364,7 +401,19 @@ func (ai *AMQPInput) ConfigStruct() interface{} {
 func (ai *AMQPInput) Init(config interface{}) (err error) {
 	conf := config.(*AMQPInputConfig)
 	ai.config = conf
-	ch, usageWg, connWg, err := amqpHub.GetChannel(conf.URL)
+	var tlsConf *tls.Config = nil
+	if strings.HasPrefix(conf.URL, "amqps://") && &ai.config.Tls != nil {
+		if tlsConf, err = tcp.CreateGoTlsConfig(&ai.config.Tls); err != nil {
+			return fmt.Errorf("TLS init error: %s", err)
+		}
+	}
+
+	var dialer = AMQPDialer{tlsConf}
+	ch, usageWg, connWg, err := amqpHub.GetChannel(conf.URL, dialer)
+	if err != nil {
+		return
+	}
+
 	var args amqp.Table
 
 	ttl := conf.QueueTTL
@@ -373,9 +422,6 @@ func (ai *AMQPInput) Init(config interface{}) (err error) {
 		args = amqp.Table{"x-message-ttl": int32(ttl)}
 	}
 
-	if err != nil {
-		return
-	}
 	defer func() {
 		if err != nil {
 			usageWg.Done()
